working on sidebar buttons functionality

--- a/mockup.html
+++ b/mockup.html
@@ -42,10 +42,7 @@
         </style>
     </head>
     <body>
-        <main
-            class="container-fluid d-flex flex-row"
-            style="height: 100vh; margin: 0; padding: 0"
-        >
+        <main class="container-fluid d-flex flex-row" style="height: 100vh; margin: 0; padding: 0">
             <section class="side-bar bg-light h-100" style="width: 6%">
                 <ul class="side-icons">
                     <li class="icon test-icon"></li>
@@ -54,10 +51,7 @@
                     <li class="icon"></li>
                 </ul>
             </section>
-            <section
-                class="content bg-dark h-100 d-flex justify-content-center align-items-center"
-                style="width: 94%; position: relative"
-            >
+            <section class="content bg-dark h-100 d-flex justify-content-center align-items-center" style="width: 94%; position: relative">
                 <div class="pop-up"></div>
             </section>
         </main>
