--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-	<link rel="stylesheet" href="style.css">
-	<title>Ft_transcendence</title>
-	<style>
-		.navbar {
-			height: 100vh; /* Set navbar height to 100% of viewport height */
-		}
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Ft_transcendence</title>
 </head>
 <body class="bg-dark">
 	<div>
 		<div class="row">
-			<div class ="col-1">
-				<nav class ="navbar bg-light justify-content-center align-items-center">
-					<ul class ="nav navbar-nav">
-						<li class ="nav-item icon mb-3"></li>
-						<li class ="nav-item icon mb-3"></li>
-						<li class ="nav-item icon mb-3"></li>
-						<li class ="nav-item icon mb-3"></li>
-						<li class ="nav-item icon mb-3"></li>
+			<div class="col-1">
+				<nav class="navbar bg-light justify-content-center align-items-center">
+					<ul class="nav navbar-nav">
+						<button class="btn btn-dark btn-icon mb-4" onclick="myFunction()"></button>
+						<button class="btn btn-dark btn-icon mb-4" onclick="myFunction()"></button>
+						<button class="btn btn-dark btn-icon mb-4" onclick="myFunction()"></button>
+						<button class="btn btn-dark btn-icon mb-4" onclick="myFunction()"></button>
+						<button class="btn btn-dark btn-icon mb-4" onclick="myFunction()"></button>
 					</ul>
 				</nav>
 			</div>
 		</div>
 	</div>
+
+	<section class="content bg-dark h-100 d-flex justify-content-center align-items-center" style="width: 94%">
+		<div class="pop-up"></div>
+	</section>
+
+	<script>
+		function myFunction() {
+			const icon = document.querySelector(".btn-icon");
+			const pop_up = document.querySelector(".pop-up");
+			
+			pop_up.classList.toggle("left-move");
+		}
+	</script>
 </body>
 </html>
