fixed buttons spacing

--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <title>Ft_transcendence</title>
 </head>
 <body class="bg-dark">
-
 	<div class="container-fluid">
 		<div class="row">
 			<!-- Sidebar -->
 			<nav class="col-1 d-md-block bg-light sidebar">
 				<div class="position-sticky">
-					<ul class="nav navbar flex-column">
-						<button class="btn btn-dark btn-icon nav-item mb-4""></button>
-						<button class="btn btn-dark btn-icon nav-item mb-4""></button>
-						<button class="btn btn-dark btn-icon nav-item mb-4""></button>
-						<button class="btn btn-dark btn-icon nav-item mb-4""></button>
-						<button class="btn btn-dark btn-icon nav-item mb-4""></button>
+					<ul class="nav navbar flex-column align-items-center justify-content-center">
+						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
+						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
+						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
+						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
+						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
 					</ul>
 				</div>
 			</nav>
@@ -31,7 +30,6 @@
 				<p>This is the main content of the page.</p>
 			</main>
 		</div>
-	</div>
 
 </body>
 </html>
