modal can't be closed by clicking outside of it (need to add system to be able to progress after login)

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 		</div>
 
 		<!-- Login Modal -->
-		<div class="modal fade" id="login-modal" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
+		<div class="modal fade" id="login-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 			<div class="modal-dialog">
-				<div class="modal-content">
+			  	<div class="modal-content">
 					<div class="modal-header">
-						<h5 class="modal-title" id="modal-title">Login</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+						<!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
 					</div>
 					<div class="modal-body">
 						<!-- Email -->
@@ -55,11 +55,12 @@
 						<!-- Register Button -->
 						<div class="text-center">
 							<p>Not a member? <a href="#!">Register</a></p>
-						  </div>
+						</div>
 					</div>
-				</div>
+			  	</div>
 			</div>
 		</div>
+
 
 </body>
 </html>
