--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ft_transcendence</title>
     <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.css"> -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Ft_transcendence</title>
 </head>
 <body class="bg-dark">
 	<div class="container-fluid">
@@ -16,7 +16,7 @@
 			<nav class="col-1 d-md-block bg-light sidebar">
 				<div class="position-sticky">
 					<ul class="nav navbar flex-column align-items-center justify-content-center">
-						<button class="btn btn-dark btn-icon nav-item mb-3" data-bs-toggle="modal" data-bs-target="#login-modal"></button>
+						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
 						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
 						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
 						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
@@ -35,7 +35,7 @@
 
 		<!-- Login Modal -->
 		<div class="modal fade" id="login-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-			<div class="modal-dialog">
+			<div class="modal-dialog modal-dialog-centered">
 			  	<div class="modal-content">
 					<div class="modal-header">
 						<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
@@ -61,6 +61,14 @@
 			</div>
 		</div>
 
+		<!-- Login Modal Trigger -->
+		<script>
+			// Trigger the modal on page load
+			document.addEventListener('DOMContentLoaded', function () {
+			  var myModal = new bootstrap.Modal(document.getElementById('login-modal'));
+			  myModal.show();
+			});
+		</script>
 
 </body>
 </html>
