--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 	<div class="container-fluid">
 		<div class="row">
 			<!-- Sidebar -->
-			<nav class="col-1 d-md-block bg-light sidebar">
+			<nav class="col-auto d-md-block bg-light ">
 				<div class="position-sticky">
 					<ul class="nav navbar flex-column align-items-center justify-content-center">
-						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
-						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
-						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
-						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
-						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
+						<button class="btn btn-dark sidebar-btn nav-item mb-3"></button>
+						<button class="btn btn-dark sidebar-btn nav-item mb-3"></button>
+						<button class="btn btn-dark sidebar-btn nav-item mb-3"></button>
+						<button class="btn btn-dark sidebar-btn nav-item mb-3"></button>
+						<button class="btn btn-dark sidebar-btn nav-item mb-3"></button>
 					</ul>
 				</div>
 			</nav>
@@ -36,25 +36,23 @@
 		<!-- Login Modal -->
 		<div class="modal fade" id="login-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered">
-			  	<div class="modal-content">
+			  	<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
 					<div class="modal-header">
-						<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+						<h5 class="modal-title text-light" id="staticBackdropLabel">Login</h5>
 						<!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
 					</div>
-					<div class="modal-body">
+					<div class="modal-body p-5">
 						<!-- Email -->
-						<label for="modal-email" class="form-label">Email address</label>
-						<input type="email" class="form-control" id="modal-email"<input/>
+						<input type="email" class="form-control mb-3" placeholder="Email" id="modal-email"<input/>
 						<!-- Password -->
-						<label for="modal-password" class="form-label">Password</label>
-						<input type="email-password" class="form-control" id="modal-email-password"<input/>
+						<input type="email-password" class="form-control" placeholder="Password" id="modal-email-password"<input/>
 						<!-- Submit Button -->
 						<div class="text-center mt-4">
-							<button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+							<button type="button" class="btn bg-gradient btn-block mb-4" style="background-color: rgb(238, 130, 238)">Sign in</button>
 						</div>
 						<!-- Register Button -->
-						<div class="text-center">
-							<p>Not a member? <a href="#!">Register</a></p>
+						<div class="text-center text-light">
+							<p>Not a member? <a href="#!" style="color: rgb(238, 130, 238)"";>Register</a></p>
 						</div>
 					</div>
 			  	</div>
