--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+
+	<!-- Icons -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body class="bg-dark">
 	<div class="container-fluid">
@@ -16,11 +19,10 @@
 			<nav class="col-auto d-md-block bg-light ">
 				<div class="position-sticky">
 					<ul class="nav navbar flex-column align-items-center justify-content-center">
-						<button class="btn btn-dark sidebar-btn nav-item mb-3"></button>
-						<button class="btn btn-dark sidebar-btn nav-item mb-3"></button>
-						<button class="btn btn-dark sidebar-btn nav-item mb-3"></button>
-						<button class="btn btn-dark sidebar-btn nav-item mb-3"></button>
-						<button class="btn btn-dark sidebar-btn nav-item mb-3"></button>
+						<button class="btn nav-item mb-3"><i class="bi bi-house h3"></i></button>
+						<button class="btn nav-item mb-3"><i class="bi bi-controller h3"></i></button>
+						<button class="btn nav-item mb-3"><i class="bi bi-chat h3"></i></button>
+						<button class="btn nav-item mb-3"><i class="bi bi-gear h3"></i></button>
 					</ul>
 				</div>
 			</nav>
