--- a/index.html
+++ b/index.html
@@ -16,22 +16,20 @@
 	<div class="container-fluid">
 		<div class="row">
 			<!-- Sidebar -->
-			<nav class="col-auto d-md-block bg-light ">
+			<nav class="col-auto d-md-block bg-light">
 				<div class="position-sticky">
 					<ul class="nav navbar flex-column align-items-center justify-content-center">
-						<button class="btn nav-item mb-3"><i class="bi bi-house h3"></i></button>
-						<button class="btn nav-item mb-3"><i class="bi bi-controller h3"></i></button>
-						<button class="btn nav-item mb-3"><i class="bi bi-chat h3"></i></button>
-						<button class="btn nav-item mb-3"><i class="bi bi-gear h3"></i></button>
+						<button class="btn nav-item mb-3" data-bs-toggle="modal" data-bs-target="#stats-modal"><i class="bi bi-person h3"></i></button> <!-- Games Button -->
+						<button class="btn nav-item mb-3"><i class="bi bi-chat h3"></i></button> <!-- Chat Button -->
+						<button class="btn nav-item mb-3"><i class="bi bi-trophy h3"></i></button> <!-- Stats Button -->
+						<button class="btn nav-item mb-3"><i class="bi bi-gear h3"></i></button> <!-- Settings Button -->
 					</ul>
 				</div>
 			</nav>
 			
 			<!-- Main Content -->
 			<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-				<!-- Main content of the page goes here -->
-				<h1>Main Content</h1>
-				<p>This is the main content of the page.</p>
+				<!-- Game Window Code -->
 			</main>
 		</div>
 
@@ -41,7 +39,6 @@
 			  	<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
 					<div class="modal-header">
 						<h5 class="modal-title text-light" id="staticBackdropLabel">Login</h5>
-						<!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
 					</div>
 					<div class="modal-body p-5">
 						<!-- Email -->
@@ -54,21 +51,49 @@
 						</div>
 						<!-- Register Button -->
 						<div class="text-center text-light">
-							<p>Not a member? <a href="#!" style="color: rgb(238, 130, 238)"";>Register</a></p>
+							<p>Not a member? <a href="#!" style="color: rgb(238, 130, 238)";>Register</a></p>
 						</div>
 					</div>
 			  	</div>
 			</div>
 		</div>
 
+		<!-- Stats Modal -->
+		<div class="modal fade" id="stats-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered">
+			  	<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+					<div class="modal-header">
+						<h5 class="modal-title text-light" id="staticBackdropLabel">Player Stats</h5>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<div class="row">
+							<!-- User Identification -->
+							<div class="col-6">
+								<i class="bi bi-person-square h1 text-light"></i> <!-- User Profile Picture -->
+								<p class="text-light">(PLAYER_USERNAME)</p> <!-- User Username -->
+							</div>
+							<!-- User Game Stats -->
+							<div class="col-6">
+								<p class="text-light">Games Played:</p>
+								<p class="text-light">Wins:</p>
+								<p class="text-light">Losses:</p>
+								<p class="text-light">Tournaments Won:</p>
+							</div>
+						</div>
+				  </div>
+			  	</div>
+			</div>
+		</div>
+
 		<!-- Login Modal Trigger -->
-		<script>
+		<!-- <script>
 			// Trigger the modal on page load
 			document.addEventListener('DOMContentLoaded', function () {
-			  var myModal = new bootstrap.Modal(document.getElementById('login-modal'));
+			  var myModal = new bootstrap.Modal(document.getElementById('stats-modal'));
 			  myModal.show();
 			});
-		</script>
+		</script> -->
 
 </body>
 </html>
