--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ft_transcendence</title>
-    <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.css"> -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+	<script src="index.js" defer></script>
 
 	<!-- Icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -20,7 +20,7 @@
 				<div class="position-sticky">
 					<ul class="nav navbar flex-column align-items-center justify-content-center">
 						<!-- Profile Button -->
-						<button class="btn nav-item mb-3 text-light" data-bs-toggle="modal" data-bs-target="#stats-modal">
+						<button id="updateButton" class="btn nav-item mb-3 text-light" data-bs-toggle="modal" data-bs-target="#stats-modal">
 							<i class="bi bi-person h3"></i>
 						</button>
 						<!-- Chat Button -->
@@ -44,108 +44,100 @@
 				<!-- Game Window Code -->
 			</main>
 		</div>
+	</div>
 
-		<!-- Login Modal -->
-		<div class="modal" id="login-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-			<div class="modal-dialog modal-dialog-centered">
-			  	<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
-					<div class="modal-header">
-						<h5 class="modal-title text-light" id="staticBackdropLabel">Login</h5>
+	<!-- Login Modal -->
+	<div class="modal" id="login-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+				<div class="modal-header">
+					<h5 class="modal-title text-light" id="staticBackdropLabel">Login</h5>
+				</div>
+				<div class="modal-body p-5">
+					<!-- Email -->
+					<input type="email" class="form-control mb-3" placeholder="Email" id="modal-email"<input/>
+					<!-- Password -->
+					<input type="email-password" class="form-control" placeholder="Password" id="modal-email-password"<input/>
+					<!-- Submit Button -->
+					<div class="text-center mt-4">
+						<button type="button" class="btn bg-gradient btn-block mb-4" style="background-color: rgb(238, 130, 238)">Sign in</button>
 					</div>
-					<div class="modal-body p-5">
-						<!-- Email -->
-						<input type="email" class="form-control mb-3" placeholder="Email" id="modal-email"<input/>
-						<!-- Password -->
-						<input type="email-password" class="form-control" placeholder="Password" id="modal-email-password"<input/>
-						<!-- Submit Button -->
-						<div class="text-center mt-4">
-							<button type="button" class="btn bg-gradient btn-block mb-4" style="background-color: rgb(238, 130, 238)">Sign in</button>
-						</div>
-						<!-- Register Button -->
-						<div class="text-center text-light">
-							<p>Not a member? <a href="#!" style="color: rgb(238, 130, 238)";>Register</a></p>
-						</div>
+					<!-- Register Button -->
+					<div class="text-center text-light">
+						<p>Not a member? <a href="#!" style="color: rgb(238, 130, 238)";>Register</a></p>
 					</div>
-			  	</div>
+				</div>
 			</div>
 		</div>
+	</div>
 
-		<!-- Player Stats Modal -->
-		<div class="modal fade" id="stats-modal" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-			<div class="modal-dialog modal-dialog-centered">
-			  	<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
-					<div class="modal-header">
-						<h5 class="modal-title text-light" id="staticBackdropLabel">Player Stats</h5>
-						<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-					</div>
-					<div class="modal-body">
-						<div class="row">
-							<!-- User Identification -->
-							<div class="col-6">
-								<i class="bi bi-person-square h1 text-light"></i> <!-- User Profile Picture -->
-								<p class="text-light">(PLAYER_USERNAME)</p> <!-- User Username -->
-							</div>
-							<!-- User Game Stats -->
-							<div class="col-6">
-								<p class="text-light">Games Played:</p>
-								<p class="text-light">Wins:</p>
-								<p class="text-light">Losses:</p>
-								<p class="text-light">Tournaments Won:</p>
-							</div>
+	<!-- Player Stats Modal -->
+	<div class="modal fade" id="stats-modal" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+				<div class="modal-header">
+					<h5 class="modal-title text-light" id="staticBackdropLabel">Player Stats</h5>
+					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div class="row">
+						<!-- User Identification -->
+						<div class="col-6">
+							<i class="bi bi-person-square h1 text-light"></i> <!-- User Profile Picture -->
+							<p class="text-light">(PLAYER_USERNAME)</p> <!-- User Username -->
 						</div>
-				  </div>
-			  	</div>
+						<!-- User Game Stats -->
+						<div class="col-6">
+							<p class="text-light">Games Played: <span id="gamesPlayed"></span></p>
+							<p class="text-light">Wins: <span id="wins"></span></p>
+							<p class="text-light">Losses: <span id="losses"></span></p>
+							<p class="text-light">Tournaments Won: <span id="tournamentWins"></span></p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+	</div>
 
-		<!-- Match History Modal -->
-		<div class="modal fade" id="match-history-modal" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-		    <div class="modal-dialog modal-dialog-centered modal-lg">
-		        <div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
-		            <div class="modal-header">
-		                <h5 class="modal-title text-light" id="staticBackdropLabel">Match History</h5>
-		                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-		            </div>
-		            <div class="modal-body">
-		                <div class="row">
-		                    <!-- Win/Loss -->
-		                    <div class="col-3">
-		                        <p class="text-light text-center">VICTORY</p>
-		                        <p class="text-light text-center">DEFEAT</p>
-		                        <p class="text-light text-center">TIE</p>
-		                        <p class="text-light text-center">DEFEAT</p>
-		                        <p class="text-light text-center">VICTORY</p>
-		                    </div>
-		                    <!-- Score -->
-		                    <div class="col-3">
-		                        <p class="text-light text-center">7 - 3</p>
-		                        <p class="text-light text-center">0 - 4</p>
-		                        <p class="text-light text-center">3 - 3</p>
-		                        <p class="text-light text-center">2 - 5</p>
-		                        <p class="text-light text-center">6 - 5</p>
-		                    </div>
-		                    <!-- Opponent -->
-		                    <div class="col-6">
-		                        <p class="text-light text-center">OPPONENT: (PLAYER_USERNAME)</p>
-		                        <p class="text-light text-center">OPPONENT: (PLAYER_USERNAME)</p>
-		                        <p class="text-light text-center">OPPONENT: (PLAYER_USERNAME)</p>
-		                        <p class="text-light text-center">OPPONENT: (PLAYER_USERNAME)</p>
-		                        <p class="text-light text-center">OPPONENT: (PLAYER_USERNAME)</p>
-		                    </div>
-		                </div>
-		            </div>
-		        </div>
-		    </div>
+	<!-- Match History Modal -->
+	<div class="modal fade" id="match-history-modal" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered modal-lg">
+			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+				<div class="modal-header">
+					<h5 class="modal-title text-light" id="staticBackdropLabel">Match History</h5>
+					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div class="row">
+						<!-- Win/Loss -->
+						<div class="col-3">
+							<p class="text-light text-center">VICTORY</p>
+							<p class="text-light text-center">DEFEAT</p>
+							<p class="text-light text-center">TIE</p>
+							<p class="text-light text-center">DEFEAT</p>
+							<p class="text-light text-center">VICTORY</p>
+						</div>
+						<!-- Score -->
+						<div class="col-3">
+							<p class="text-light text-center">7 - 3</p>
+							<p class="text-light text-center">0 - 4</p>
+							<p class="text-light text-center">3 - 3</p>
+							<p class="text-light text-center">2 - 5</p>
+							<p class="text-light text-center">6 - 5</p>
+						</div>
+						<!-- Opponent -->
+						<div class="col-6">
+							<p class="text-light text-center">OPPONENT: (PLAYER_USERNAME)</p>
+							<p class="text-light text-center">OPPONENT: (PLAYER_USERNAME)</p>
+							<p class="text-light text-center">OPPONENT: (PLAYER_USERNAME)</p>
+							<p class="text-light text-center">OPPONENT: (PLAYER_USERNAME)</p>
+							<p class="text-light text-center">OPPONENT: (PLAYER_USERNAME)</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-
-		<!-- Login Modal Trigger -->
-		<!-- <script>
-			// Trigger the modal on page load
-			document.addEventListener('DOMContentLoaded', function () {
-			  var myModal = new bootstrap.Modal(document.getElementById('match-history-modal'));
-			  myModal.show();
-			});
-		</script> -->
+	</div>
 
 </body>
 </html>
