--- a/index.html
+++ b/index.html
@@ -1,65 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.css"> -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Ft_transcendence</title>
-</head>
-<body class="bg-dark">
-	<div class="container-fluid">
-		<div class="row">
-			<!-- Sidebar -->
-			<nav class="col-1 d-md-block bg-light sidebar">
-				<div class="position-sticky">
-					<ul class="nav navbar flex-column align-items-center justify-content-center">
-						<button class="btn btn-dark btn-icon nav-item mb-3" data-bs-toggle="modal" data-bs-target="#login-modal"></button>
-						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
-						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
-						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
-						<button class="btn btn-dark btn-icon nav-item mb-3"></button>
-					</ul>
-				</div>
-			</nav>
-			
-			<!-- Main Content -->
-			<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-				<!-- Main content of the page goes here -->
-				<h1>Main Content</h1>
-				<p>This is the main content of the page.</p>
-			</main>
-		</div>
-
-		<!-- Login Modal -->
-		<div class="modal fade" id="login-modal" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="modal-title">Login</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-					</div>
-					<div class="modal-body">
-						<!-- Email -->
-						<label for="modal-email" class="form-label">Email address</label>
-						<input type="email" class="form-control" id="modal-email"<input/>
-						<!-- Password -->
-						<label for="modal-password" class="form-label">Password</label>
-						<input type="email-password" class="form-control" id="modal-email-password"<input/>
-						<!-- Submit Button -->
-						<div class="text-center mt-4">
-							<button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
-						</div>
-						<!-- Register Button -->
-						<div class="text-center">
-							<p>Not a member? <a href="#!">Register</a></p>
-						  </div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Pong Game</title>
+    </head>
+    <style>
+        @import url("httpsL//fonts.googleapis.com/css2?family=Poppins&display=swap");
+        * {
+            font-family: "Poppins", sans-serif;
+        }
+        body {
+            text-align: center;
+            background-color: ghostwhite;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+            position: fixed;
+            width: 100vw;
+        }
+        canvas {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+    <body>
+        <h1>Pong Game</h1>
+        <canvas></canvas>
+        <p>Control the left player by using up and down arrow keys</p>
+        <script src="./pong.js"></script>
+    </body>
 </html>
