--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	</div>
 
 	<!-- Register Modal -->
-	<div id="register-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div id="register-modal" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg">
 			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
 				<div class="modal-header">
