worked some more on the register modal

--- a/index.html
+++ b/index.html
@@ -84,28 +84,26 @@
 					<div class="modal-body">
 						<div class="row">
 							<!-- Avatar Selection -->
-							<div class="col-4 text-center pr-5">
+							<div class="col-4 text-center" style="margin-top: -40px;">
 								<!-- Current Avatar -->
 								<i class="bi bi-person-square text-light registerIcon"></i>
 								<div class="text-center">
-									<button class="btn bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Change Avatar</button>
+									<button class="btn btn-sm bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Change Avatar</button>
 								</div>
 							</div>
 							<!-- Register Components -->
-							<div class="col-8">
+							<div class="col-8 p-5">
+								<!-- Username -->
+								<input type="username" class="form-control mb-3" placeholder="Username"></input>
 								<!-- Email -->
 								<input type="email" class="form-control mb-3" placeholder="Email"></input>
 								<!-- Password -->
-								<input type="email-password" class="form-control mb-3" placeholder="Password"></input>
-								<!-- Confirm Password -->
-								<input type="email-password" class="form-control mb-5" placeholder="Confirm Password"></input>
-								<!-- Username -->
-								<input type="username" class="form-control" placeholder="Username"></input>
+								<input type="email-password" class="form-control" placeholder="Password"></input>
+								<!-- Submit Button -->
+								<div class="text-center mt-5">
+									<button id="registerRequestBtn" class="btn bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Register</button>
+								</div>
 							</div>
-						</div>
-						<!-- Submit Button -->
-						<div class="text-center mt-5">
-							<button class="btn bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Register</button>
 						</div>
 					</div>
 				</div>
