login and register modals now show a message when code 200 is not returned

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Login</h5>
 				</div>
 				<div class="modal-body p-5">
+					<!-- Error Message -->
+					<div id="loginErrorMessage" class="text-danger position-absolute mb-3" style="display: none; margin-top: -30px;"></div>
 					<!-- Email -->
 					<input type="email" class="form-control mb-3" placeholder="Email"></input>
 					<!-- Password -->
@@ -93,6 +95,8 @@
 							</div>
 							<!-- Register Components -->
 							<div class="col-8 p-5">
+								<!-- Error Message -->
+								<div id="registerErrorMessage" class="text-danger position-absolute mb-3" style="display: none; margin-top: -30px;"></div>
 								<!-- Username -->
 								<input type="username" class="form-control mb-3" placeholder="Username"></input>
 								<!-- Email -->
