fixed a class name

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<!-- Avatar Selection -->
 							<div class="col-4 text-center" style="margin-top: -40px;">
 								<!-- Current Avatar -->
-								<i class="bi bi-person-square text-light registerIcon"></i>
+								<i class="bi bi-person-square text-light register-icon"></i>
 								<div class="text-center">
 									<button class="btn btn-sm bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Change Avatar</button>
 								</div>
