--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 					<!-- Error Message -->
 					<div id="loginErrorMessage" class="text-danger position-absolute mb-3" style="display: none; margin-top: -30px;"></div>
 					<!-- Email -->
-					<input type="email" class="form-control mb-3" placeholder="Email"></input>
+					<input class="form-control mb-3" placeholder="Email"></input>
 					<!-- Password -->
-					<input type="email-password" class="form-control" placeholder="Password"></input>
+					<input class="form-control" placeholder="Password"></input>
 					<!-- Submit Button -->
 					<div class="text-center mt-4">
 						<button id="loginRequestBtn" class="btn bg-gradient btn-block mb-4" style="background-color: rgb(238, 130, 238)">Sign in</button>
