changed login/register code to search input fields by id

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 					<!-- Error Message -->
 					<div id="loginErrorMessage" class="text-danger position-absolute mb-3" style="display: none; margin-top: -30px;"></div>
 					<!-- Email -->
-					<input class="form-control mb-3" placeholder="Email"></input>
+					<input id="loginEmail" class="form-control mb-3" placeholder="Email"></input>
 					<!-- Password -->
-					<input class="form-control" placeholder="Password"></input>
+					<input id="loginPassword" class="form-control" placeholder="Password"></input>
 					<!-- Submit Button -->
 					<div class="text-center mt-4">
 						<button id="loginRequestBtn" class="btn bg-gradient btn-block mb-4" style="background-color: rgb(238, 130, 238)">Sign in</button>
@@ -98,11 +98,11 @@
 								<!-- Error Message -->
 								<div id="registerErrorMessage" class="text-danger position-absolute mb-3" style="display: none; margin-top: -30px;"></div>
 								<!-- Username -->
-								<input type="username" class="form-control mb-3" placeholder="Username"></input>
+								<input id="registerUsername" class="form-control mb-3" placeholder="Username"></input>
 								<!-- Email -->
-								<input type="email" class="form-control mb-3" placeholder="Email"></input>
+								<input id="registerEmail" class="form-control mb-3" placeholder="Email"></input>
 								<!-- Password -->
-								<input type="email-password" class="form-control" placeholder="Password"></input>
+								<input id="registerPassword" class="form-control" placeholder="Password"></input>
 								<!-- Submit Button -->
 								<div class="text-center mt-5">
 									<button id="registerRequestBtn" class="btn bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Register</button>
