login and register modals now hide password when typing

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<!-- Email -->
 					<input id="loginEmail" class="form-control mb-3" placeholder="Email"></input>
 					<!-- Password -->
-					<input id="loginPassword" class="form-control" placeholder="Password"></input>
+					<input type="password" id="loginPassword" class="form-control" placeholder="Password"></input>
 					<!-- Submit Button -->
 					<div class="text-center mt-4">
 						<button id="loginRequestBtn" class="btn bg-gradient btn-block mb-4" style="background-color: rgb(238, 130, 238)">Sign in</button>
@@ -102,7 +102,7 @@
 								<!-- Email -->
 								<input id="registerEmail" class="form-control mb-3" placeholder="Email"></input>
 								<!-- Password -->
-								<input id="registerPassword" class="form-control" placeholder="Password"></input>
+								<input type="password" id="registerPassword" class="form-control" placeholder="Password"></input>
 								<!-- Submit Button -->
 								<div class="text-center mt-5">
 									<button id="registerRequestBtn" class="btn bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Register</button>
