--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 				<div class="modal-body p-5">
 					<!-- Error Message -->
-					<div id="loginErrorMessage" class="text-danger position-absolute mb-3" style="display: none; margin-top: -30px;"></div>
+					<div id="loginErrorMessage" class="text-danger position-absolute mb-3" 	style="display: none; margin-top: -30px;"></div>
 					<!-- Email -->
 					<input id="loginEmail" class="form-control mb-3" placeholder="Email"></input>
 					<!-- Password -->
@@ -64,6 +64,8 @@
 					<!-- Submit Button -->
 					<div class="text-center mt-4">
 						<button id="loginRequestBtn" class="btn bg-gradient btn-block mb-4" style="background-color: rgb(238, 130, 238)">Sign in</button>
+						<!-- Show Password <Button> -->
+						<input id="showPasswordBtnLogin" type="checkbox">Show Password</input>
 					</div>
 					<!-- Register Button -->
 					<div class="text-center text-light">
@@ -103,6 +105,8 @@
 								<input id="registerEmail" class="form-control mb-3" placeholder="Email"></input>
 								<!-- Password -->
 								<input type="password" id="registerPassword" class="form-control" placeholder="Password"></input>
+								<!-- Show Password <Button> -->
+								<input id="showPasswordBtnRegister" type="checkbox">Show Password</input>
 								<!-- Submit Button -->
 								<div class="text-center mt-5">
 									<button id="registerRequestBtn" class="btn bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Register</button>
