changed show password button color for better readability

--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@
 					<!-- Email -->
 					<input id="loginEmail" class="form-control mb-3" placeholder="Email"></input>
 					<!-- Password -->
-					<input type="password" id="loginPassword" class="form-control" placeholder="Password"></input>
+					<input id="loginPassword" type="password" class="form-control" placeholder="Password"></input>
 					<!-- Submit Button -->
+					<!-- Show Password Button -->
+					<input id="showPasswordBtnLogin" type="checkbox"></input>
+					<label for="showPasswordBtnLogin" class="showPasswordBtn">Show Password</label>
 					<div class="text-center mt-4">
 						<button id="loginRequestBtn" class="btn bg-gradient btn-block mb-4" style="background-color: rgb(238, 130, 238)">Sign in</button>
-						<!-- Show Password <Button> -->
-						<input id="showPasswordBtnLogin" type="checkbox">Show Password</input>
 					</div>
 					<!-- Register Button -->
 					<div class="text-center text-light">
@@ -104,9 +105,10 @@
 								<!-- Email -->
 								<input id="registerEmail" class="form-control mb-3" placeholder="Email"></input>
 								<!-- Password -->
-								<input type="password" id="registerPassword" class="form-control" placeholder="Password"></input>
-								<!-- Show Password <Button> -->
-								<input id="showPasswordBtnRegister" type="checkbox">Show Password</input>
+								<input id="registerPassword" type="password" class="form-control" placeholder="Password"></input>
+								<!-- Show Password Button -->
+								<input id="showPasswordBtnRegister" type="checkbox"></input>
+								<label for="showPasswordBtnRegister" class="showPasswordBtn">Show Password</label>
 								<!-- Submit Button -->
 								<div class="text-center mt-5">
 									<button id="registerRequestBtn" class="btn bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Register</button>
