--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
 					</div>
 					<div>
 						<!-- Points Graph -->
-						<canvas id="chartCanvas" width="700" height="400"></canvas>
-						  <div id="tooltip" style="position: absolute; display: none; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px;"></div>
+						<canvas id="statsChart" width="700" height="400"></canvas>
 					</div>
 				</div>
 			</div>
