centered points chart div and extended the graph more to the right

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 							<p class="text-light">Tournaments Won: <span id="tournamentWins"></span></p>
 						</div>
 					</div>
-					<div>
+					<div class="text-center">
 						<!-- Points Graph -->
 						<canvas id="statsChart" width="700" height="400"></canvas>
 					</div>
