--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="index.js" defer></script>
 
 	<!-- Icons -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body class="bg-dark">
 	<div class="container-fluid">
@@ -25,7 +25,7 @@
 							<i class="bi bi-person h3"></i>
 						</button>
 						<!-- Chat Button -->
-						<button class="btn nav-item mb-3 text-light">
+						<button class="btn nav-item mb-3 text-light" data-bs-toggle="modal" data-bs-target="#chat-modal">
 							<i class="bi bi-chat h3"></i>
 						</button>
 						<!-- Match History Button -->
@@ -141,7 +141,7 @@
 
 	<!-- Player Stats Modal -->
 	<div id="stats-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered modal-lg">
+		<div class="modal-dialog modal-dialog-centered modal-xl">
 			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Player Stats</h5>
@@ -165,6 +165,36 @@
 					<div class="text-center">
 						<!-- Points Graph -->
 						<canvas id="statsChart" width="700" height="400"></canvas>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Chat Modal -->
+	<div id="chat-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered modal-xl">
+			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+				<div class="modal-header">
+					<h5 class="modal-title text-light" id="staticBackdropLabel">Chat</h5>
+					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div class="row">
+						<!-- Friends Column -->
+						<div class="col-2 border-end">
+							<h5 class="text-light">Friends</h5>
+						</div>
+						<!-- Live Chat -->
+						<div class="col-10">
+							<!-- Message Input And Send Button -->
+							<div class="d-flex h-50">
+								<textarea class="w-100" placeholder="Type message.." name="msg" required></textarea>
+								<button class="btn text-light">
+									<i class="bi bi-send"></i>
+								</button>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
